fix: Adjust aspect ratio for blockquote styling to prevent distortion

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6354,6 +6354,7 @@ blockquote:before {
   border-radius: 2.08vw;
   /*40px;*/
   height: 15.52vw;
+  aspect-ratio: unset !important;
   /*298px;*/
 }
 
